--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "Suraj Chand",
   "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^3.0.6",
+    "bluebird": "^3.5.4",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "http-status": "^1.3.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "mongodb": "^3.2.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
