--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "lodash": "^4.17.11",
     "mongodb": "^3.2.3",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-local": "^1.0.0"
   }
 }
