--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.4",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "http-status": "^1.3.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
+    "moment-timezone": "^0.5.25",
     "mongodb": "^3.2.3",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "sanitize-html": "^1.20.0"
+    "sanitize-html": "^1.20.0",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^4.0.3"
   }
 }
